--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -4,9 +4,8 @@ body {
     box-sizing: border-box;
     min-width: 100%;
     min-height: 100%;
-    margin-top: 86px;
     font-family: 'Poppins', sans-serif;
-    font-size: 16px;
+    font-size: 0.9rem;
     font-weight: 300;
 }
 
