--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -5,7 +5,7 @@ body {
     min-width: 100%;
     min-height: 100%;
     font-family: 'Poppins', sans-serif;
-    font-size: 0.9rem;
+    background-color: #d9d4d4;
     font-weight: 300;
 }
 
@@ -33,4 +33,17 @@ body {
         transition: 0.4s ease;
         color: #fff !important;
     }
+  }
+
+  #home-svg-wrapper {
+    position: absolute;
+    bottom: -7px;
+    left: 0;
+    width: 100%;
+
+
+  }
+
+  #home-clipath > path {
+    fill:  #d9d4d4;
   }
