--- a/webapp/src/pages/demo/styles.css
+++ b/webapp/src/pages/demo/styles.css
@@ -1,17 +1,26 @@
 .container-fluid {
     width: 100%;
     margin: auto;
-    background-image: url("../../assets/images/bg.jpg");
-    padding: 40px;
+    background: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.8)), url("../../assets/images/machinelearning.png");
+    padding: 40px 0;
+    background-size: cover;
+    background-position: center;
 }
 .form-group {
     background-color: #fff;
-    padding: 20px;
+    padding: 20px 20px 40px 20px;
     width: 80%;
     margin: auto;
     border-radius: 25px;
 }
 
+.form-group h1, p {
+    text-align: center;
+}
+.form-group h1 {
+    color: #DD6058;
+    font-weight: 700;
+}
 .form-group form {
     display: flex;
     gap: 2px;
@@ -42,4 +51,10 @@
     color: #fff;
     font-weight: 700;
     font-size: 18;
+    text-transform: uppercase;
+}
+
+.getdemo-btn button:hover {
+    cursor: pointer;
+    opacity: 0.7;
 }
