--- a/webapp/src/components/forum/leftSideMenu/styles.css
+++ b/webapp/src/components/forum/leftSideMenu/styles.css
@@ -47,3 +47,28 @@ li a svg {
     padding: 5px;
     font-weight: 700;
 }
+p.search-input {
+    position: relative;
+}
+p.search-input input {
+    margin: 0;
+    padding: 6px;
+    width: 100%;
+    outline: none;
+    border: none;
+    height: 30px;
+    border-radius: 40px;
+    background-color: #EAEAEA;
+}
+p.search-input button {
+    position: absolute;
+    top: 0;
+    border-radius: 40px;
+    right: 0;
+    z-index: 2;
+    border: none;
+    height: 30px;
+    cursor: pointer;
+    color: #fff;
+    transform: translateX(2px);
+}
